# platform.core.api.haptic

./: CMakeLists.txt
TC/testcase/: Makefile  tslist  utc_system_haptic_basic.c  utc_system_haptic_play.c
debian/: changelog  control  rules
include/: haptic.h  haptic_private.h
packaging/: capi-system-haptic.changes  capi-system-haptic.spec
src/: haptic.c  haptic_private.c
test/: CMakeLists.txt  system-haptic.c  system-haptic2.c  system-haptic3.c  test_lock.c  test_ui.c
